# VmCastle-ClipboardTool

./: CMakeLists.txt  LICENSE  README.md  install.sh
scripts/: README.md  install-generic.sh  install-gnome.sh  install-hyprland.sh  install-i3.sh  install-kde.sh  install-sway.sh
src/: clipboard_entry.cpp  clipboard_entry.hpp  clipboard_manager.cpp  clipboard_manager.h  clipboard_manager.hpp  gui.cpp  gui.h  main.cpp
src/ui/: main_window.cpp  main_window.hpp  shortcuts.cpp  shortcuts.hpp  tray_icon.cpp  tray_icon.hpp
